--- a/espfiles/esphome-dualreed.yaml
+++ b/espfiles/esphome-dualreed.yaml
@@ -1,6 +1,6 @@
 esphome:
-  name: esphome-002
-  friendly_name: esphome-002
+  name: esphome-dualreed
+  friendly_name: esphome-dualreed
 
 esp32:
   board: esp32dev
@@ -13,9 +13,10 @@ logger:
 # Enable Home Assistant API
 api:
   encryption:
-    key: "pejEnqLjVjTBxHo8K5AL51/luc/0oBeOC69PZ8cTqEk="
+    key: "QVrqwmSYH8d30x4hgAqlM5Uzr17m6dDwmoLchhNBpHQ="
 
 ota:
+  password: "880a98cad5ef1e07222f8895b570ee93"
 
 wifi:
   ssid: !secret wifi_ssid
@@ -23,9 +24,8 @@ wifi:
 
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
-    ssid: "Esphome-002- Fallback"
-    password: "7Q1xKtqnxoOd"
-
+    ssid: "Esphome-Dualreed"
+    password: "cRd74MEKt8jR"
 
 binary_sensor:
   - platform: gpio
@@ -47,5 +47,24 @@ binary_sensor:
     name: "reedswitch02"
     device_class: door    
 
+sensor:
+  - platform: template
+    name: "Reed puzzle Solved"
+    unit_of_measurement: "%"
+    update_interval: 2s
+    lambda: |-
+      if (!digitalRead(5) && !digitalRead(16)) {
+        return 100; 
+      }
+      else if (!digitalRead(5)) {
+        return 50; 
+      }
+      else if (!digitalRead(16)) {
+        return 50; 
+      }
+      else {
+        return 0;
+      }
+      
 captive_portal:
     
